# services/bff-api/api/openapi.yaml
@@ -39,6 +39,10 @@ paths:
     $ref: './paths/metrics_scatter.yaml'
   /scope/available-metrics:
     $ref: './paths/scope_available_metrics.yaml'
+  /scope/available-metadata:
+    $ref: './paths/scope_available_metadata.yaml'
+  /metadata/{field}/distribution:
+    $ref: './paths/metadata_distribution.yaml'
   /entities:
     $ref: './paths/entities.yaml'
   /entities/cooccurrence:
@@ -151,6 +155,10 @@ components:
       $ref: './schemas/RefusalPayload.yaml'
     DistributionResponse:
       $ref: './schemas/DistributionResponse.yaml'
+    CategoricalDistributionResponse:
+      $ref: './schemas/CategoricalDistributionResponse.yaml'
+    ScopeAvailableMetadata:
+      $ref: './schemas/ScopeAvailableMetadata.yaml'
     HeatmapResponse:
       $ref: './schemas/HeatmapResponse.yaml'
     CorrelationMatrix:
